# ProtoRl

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: SetHeadersSources.cmake  Settings.cmake  Utils.cmake  protorlconfig.hpp.in
cross/: CMakeLists.txt
cross/include/: cross.hpp
cross/src/: cross.cpp
include/engine/: game.hpp  prl.hpp  roguengine.hpp
src/: main.cpp
src/engine/: game.cpp  prl.cpp  roguengine.cpp
